--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dnd-kit-builder",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "dependencies": {
     "@chakra-ui/react": "^2.5.1",
     "@dnd-kit/core": "^6.0.7",
@@ -21,9 +22,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0",
-    "@faker-js/faker": "^7.6.0"
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,5 +48,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
+    "eslint": "^8.34.0",
+    "eslint-config-react-app": "^7.0.1",
+    "prettier": "^2.8.4",
+    "prettier-plugin-organize-imports": "^3.2.2"
   }
 }
